# tz-to-do-list

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
api_v1/: __init__.py  authentication.py  tasks.py  users.py
app/authentication/: auth.py  dao.py  exeptions.py
core/models/: tasks_users.py  users.py
core/schemas/: tasks_sch.py  users_sch.py
db/: docker-compose.yaml
migrations/: env.py
migrations/versions/: 3d71ee2223ab_create_table_users_tasks.py  c40b1c665d64_create_table_tasks.py
settings/: env_config.py
settings/database/: database.py  repository.py
