[tool.poetry]
name = "tz-to-do-list"
version = "0.1.0"
description = ""
authors = ["vellimir <kkazancov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = "^0.115.4"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
redis = "^5.2.0"
aiohttp = "^3.10.10"
pydantic = "^2.9.2"
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
uvicorn = "^0.32.0"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
